p4/y.output
State 86 conflicts: 2 shift/reduce
State 87 conflicts: 2 shift/reduce
State 88 conflicts: 2 shift/reduce
State 89 conflicts: 2 shift/reduce
State 90 conflicts: 2 shift/reduce
State 91 conflicts: 2 shift/reduce
State 92 conflicts: 2 shift/reduce
State 93 conflicts: 2 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: MainClass

    2 MainClass: KW_CLASS ID '{' StaticVarDeclList StaticMethodDeclList KW_PUBLIC KW_STATIC KW_VOID MAIN '(' KW_STRING '[' ']' ID ')' '{' StatementList '}' '}'

    3 VarDecl: Type ID ExpDecl VarDeclExpList ';'

    4 StaticVarDecl: KW_PRIVATE KW_STATIC VarDecl

    5 StaticVarDeclList: StaticVarDeclList StaticVarDecl
    6                  | /* empty */

    7 VarDeclExpList: ',' ID ExpDecl VarDeclExpList
    8               | /* empty */

    9 Statement: VarDecl
   10          | '{' StatementList '}'
   11          | KW_IF '(' Exp ')' Statement KW_ELSE Statement
   12          | KW_WHILE '(' Exp ')' Statement
   13          | SYSTEM_OUT_PRINTLN '(' Exp ')' ';'
   14          | SYSTEM_OUT_PRINT '(' Exp ')' ';'
   15          | LeftValue '=' Exp ';'
   16          | KW_RETURN Exp ';'
   17          | MethodCall ';'

   18 StatementList: StatementList Statement
   19              | /* empty */

   20 LeftValue: ID
   21          | ID Index

   22 Index: '[' Exp ']'
   23      | Index '[' Exp ']'

   24 Type: PrimeType
   25     | Type '[' ']'

   26 PrimeType: KW_INT
   27          | KW_BOOLEAN
   28          | KW_STRING

   29 MethodCall: ID '(' ExpList ')'
   30           | INTEGER_PARSE_INT '(' Exp ')'

   31 StaticMethodDecl: KW_PUBLIC KW_STATIC Type ID '(' FormalList ')' '{' StatementList '}'

   32 StaticMethodDeclList: StaticMethodDeclList StaticMethodDecl
   33                     | /* empty */

   34 FormalList: Arg ArgList
   35           | /* empty */

   36 Arg: Type ID

   37 ArgList: ',' Arg ArgList
   38        | /* empty */

   39 Exp: Exp TOK_PLUS Term
   40    | Exp TOK_MINUS Term
   41    | Exp TOK_AND Exp
   42    | Exp TOK_OR Exp
   43    | Exp TOK_LESS Exp
   44    | Exp TOK_GREAT Exp
   45    | Exp TOK_LEQ Exp
   46    | Exp TOK_GREQ Exp
   47    | Exp TOK_EQ Exp
   48    | Exp TOK_NEQ Exp
   49    | Term

   50 Term: Term TOK_MULT Factor
   51     | Term TOK_DIV Factor
   52     | Factor

   53 Factor: INTEGER_LITERAL
   54       | STRING_LITERAL
   55       | KW_TRUE
   56       | KW_FALSE
   57       | TOK_NOT Factor
   58       | TOK_PLUS Factor
   59       | TOK_MINUS Factor
   60       | '(' Exp ')'
   61       | LeftValue
   62       | LeftValue '.' KW_LENGTH
   63       | MethodCall
   64       | KW_NEW PrimeType Index

   65 ExpDecl: '=' Exp
   66        | /* empty */

   67 ExpList: Exp ExpTail
   68        | /* empty */

   69 ExpTail: ',' Exp ExpTail
   70        | /* empty */


Terminals, with rules where they appear

$end (0) 0
'(' (40) 2 11 12 13 14 29 30 31 60
')' (41) 2 11 12 13 14 29 30 31 60
',' (44) 7 37 69
'.' (46) 62
';' (59) 3 13 14 15 16 17
'=' (61) 15 65
'[' (91) 2 22 23 25
']' (93) 2 22 23 25
'{' (123) 2 10 31
'}' (125) 2 10 31
error (256)
TOK_AND (258) 41
TOK_OR (259) 42
TOK_LESS (260) 43
TOK_GREAT (261) 44
TOK_LEQ (262) 45
TOK_GREQ (263) 46
TOK_NEQ (264) 48
TOK_EQ (265) 47
TOK_PLUS (266) 39 58
TOK_MINUS (267) 40 59
TOK_MULT (268) 50
TOK_DIV (269) 51
TOK_NOT (270) 57
KW_BOOLEAN (271) 27
KW_CLASS (272) 2
KW_FALSE (273) 56
KW_INT (274) 26
MAIN (275) 2
KW_PUBLIC (276) 2 31
KW_TRUE (277) 55
KW_VOID (278) 2
KW_IF (279) 11
KW_ELSE (280) 11
KW_RETURN (281) 16
KW_WHILE (282) 12
KW_LENGTH (283) 62
KW_STATIC (284) 2 4 31
KW_STRING (285) 2 28
KW_NEW (286) 64
KW_PRIVATE (287) 4
SYSTEM_OUT_PRINT (288) 14
SYSTEM_OUT_PRINTLN (289) 13
INTEGER_PARSE_INT (290) 30
INTEGER_LITERAL (291) 53
STRING_LITERAL (292) 54
ID (293) 2 3 7 20 21 29 31 36


Nonterminals, with rules where they appear

$accept (49)
    on left: 0
Program (50)
    on left: 1, on right: 0
MainClass (51)
    on left: 2, on right: 1
VarDecl (52)
    on left: 3, on right: 4 9
StaticVarDecl (53)
    on left: 4, on right: 5
StaticVarDeclList (54)
    on left: 5 6, on right: 2 5
VarDeclExpList (55)
    on left: 7 8, on right: 3 7
Statement (56)
    on left: 9 10 11 12 13 14 15 16 17, on right: 11 12 18
StatementList (57)
    on left: 18 19, on right: 2 10 18 31
LeftValue (58)
    on left: 20 21, on right: 15 61 62
Index (59)
    on left: 22 23, on right: 21 23 64
Type (60)
    on left: 24 25, on right: 3 25 31 36
PrimeType (61)
    on left: 26 27 28, on right: 24 64
MethodCall (62)
    on left: 29 30, on right: 17 63
StaticMethodDecl (63)
    on left: 31, on right: 32
StaticMethodDeclList (64)
    on left: 32 33, on right: 2 32
FormalList (65)
    on left: 34 35, on right: 31
Arg (66)
    on left: 36, on right: 34 37
ArgList (67)
    on left: 37 38, on right: 34 37
Exp (68)
    on left: 39 40 41 42 43 44 45 46 47 48 49, on right: 11 12 13 14
    15 16 22 23 30 39 40 41 42 43 44 45 46 47 48 60 65 67 69
Term (69)
    on left: 50 51 52, on right: 39 40 49 50 51
Factor (70)
    on left: 53 54 55 56 57 58 59 60 61 62 63 64, on right: 50 51 52
    57 58 59
ExpDecl (71)
    on left: 65 66, on right: 3 7
ExpList (72)
    on left: 67 68, on right: 29
ExpTail (73)
    on left: 69 70, on right: 67 69


state 0

    0 $accept: . Program $end

    KW_CLASS  shift, and go to state 1

    Program    go to state 2
    MainClass  go to state 3


state 1

    2 MainClass: KW_CLASS . ID '{' StaticVarDeclList StaticMethodDeclList KW_PUBLIC KW_STATIC KW_VOID MAIN '(' KW_STRING '[' ']' ID ')' '{' StatementList '}' '}'

    ID  shift, and go to state 4


state 2

    0 $accept: Program . $end

    $end  shift, and go to state 5


state 3

    1 Program: MainClass .

    $default  reduce using rule 1 (Program)


state 4

    2 MainClass: KW_CLASS ID . '{' StaticVarDeclList StaticMethodDeclList KW_PUBLIC KW_STATIC KW_VOID MAIN '(' KW_STRING '[' ']' ID ')' '{' StatementList '}' '}'

    '{'  shift, and go to state 6


state 5

    0 $accept: Program $end .

    $default  accept


state 6

    2 MainClass: KW_CLASS ID '{' . StaticVarDeclList StaticMethodDeclList KW_PUBLIC KW_STATIC KW_VOID MAIN '(' KW_STRING '[' ']' ID ')' '{' StatementList '}' '}'

    $default  reduce using rule 6 (StaticVarDeclList)

    StaticVarDeclList  go to state 7


state 7

    2 MainClass: KW_CLASS ID '{' StaticVarDeclList . StaticMethodDeclList KW_PUBLIC KW_STATIC KW_VOID MAIN '(' KW_STRING '[' ']' ID ')' '{' StatementList '}' '}'
    5 StaticVarDeclList: StaticVarDeclList . StaticVarDecl

    KW_PRIVATE  shift, and go to state 8

    $default  reduce using rule 33 (StaticMethodDeclList)

    StaticVarDecl         go to state 9
    StaticMethodDeclList  go to state 10


state 8

    4 StaticVarDecl: KW_PRIVATE . KW_STATIC VarDecl

    KW_STATIC  shift, and go to state 11


state 9

    5 StaticVarDeclList: StaticVarDeclList StaticVarDecl .

    $default  reduce using rule 5 (StaticVarDeclList)


state 10

    2 MainClass: KW_CLASS ID '{' StaticVarDeclList StaticMethodDeclList . KW_PUBLIC KW_STATIC KW_VOID MAIN '(' KW_STRING '[' ']' ID ')' '{' StatementList '}' '}'
   32 StaticMethodDeclList: StaticMethodDeclList . StaticMethodDecl

    KW_PUBLIC  shift, and go to state 12

    StaticMethodDecl  go to state 13


state 11

    4 StaticVarDecl: KW_PRIVATE KW_STATIC . VarDecl

    KW_BOOLEAN  shift, and go to state 14
    KW_INT      shift, and go to state 15
    KW_STRING   shift, and go to state 16

    VarDecl    go to state 17
    Type       go to state 18
    PrimeType  go to state 19


state 12

    2 MainClass: KW_CLASS ID '{' StaticVarDeclList StaticMethodDeclList KW_PUBLIC . KW_STATIC KW_VOID MAIN '(' KW_STRING '[' ']' ID ')' '{' StatementList '}' '}'
   31 StaticMethodDecl: KW_PUBLIC . KW_STATIC Type ID '(' FormalList ')' '{' StatementList '}'

    KW_STATIC  shift, and go to state 20


state 13

   32 StaticMethodDeclList: StaticMethodDeclList StaticMethodDecl .

    $default  reduce using rule 32 (StaticMethodDeclList)


state 14

   27 PrimeType: KW_BOOLEAN .

    $default  reduce using rule 27 (PrimeType)


state 15

   26 PrimeType: KW_INT .

    $default  reduce using rule 26 (PrimeType)


state 16

   28 PrimeType: KW_STRING .

    $default  reduce using rule 28 (PrimeType)


state 17

    4 StaticVarDecl: KW_PRIVATE KW_STATIC VarDecl .

    $default  reduce using rule 4 (StaticVarDecl)


state 18

    3 VarDecl: Type . ID ExpDecl VarDeclExpList ';'
   25 Type: Type . '[' ']'

    ID   shift, and go to state 21
    '['  shift, and go to state 22


state 19

   24 Type: PrimeType .

    $default  reduce using rule 24 (Type)


state 20

    2 MainClass: KW_CLASS ID '{' StaticVarDeclList StaticMethodDeclList KW_PUBLIC KW_STATIC . KW_VOID MAIN '(' KW_STRING '[' ']' ID ')' '{' StatementList '}' '}'
   31 StaticMethodDecl: KW_PUBLIC KW_STATIC . Type ID '(' FormalList ')' '{' StatementList '}'

    KW_BOOLEAN  shift, and go to state 14
    KW_INT      shift, and go to state 15
    KW_VOID     shift, and go to state 23
    KW_STRING   shift, and go to state 16

    Type       go to state 24
    PrimeType  go to state 19


state 21

    3 VarDecl: Type ID . ExpDecl VarDeclExpList ';'

    '='  shift, and go to state 25

    $default  reduce using rule 66 (ExpDecl)

    ExpDecl  go to state 26


state 22

   25 Type: Type '[' . ']'

    ']'  shift, and go to state 27


state 23

    2 MainClass: KW_CLASS ID '{' StaticVarDeclList StaticMethodDeclList KW_PUBLIC KW_STATIC KW_VOID . MAIN '(' KW_STRING '[' ']' ID ')' '{' StatementList '}' '}'

    MAIN  shift, and go to state 28


state 24

   25 Type: Type . '[' ']'
   31 StaticMethodDecl: KW_PUBLIC KW_STATIC Type . ID '(' FormalList ')' '{' StatementList '}'

    ID   shift, and go to state 29
    '['  shift, and go to state 22


state 25

   65 ExpDecl: '=' . Exp

    TOK_PLUS           shift, and go to state 30
    TOK_MINUS          shift, and go to state 31
    TOK_NOT            shift, and go to state 32
    KW_FALSE           shift, and go to state 33
    KW_TRUE            shift, and go to state 34
    KW_NEW             shift, and go to state 35
    INTEGER_PARSE_INT  shift, and go to state 36
    INTEGER_LITERAL    shift, and go to state 37
    STRING_LITERAL     shift, and go to state 38
    ID                 shift, and go to state 39
    '('                shift, and go to state 40

    LeftValue   go to state 41
    MethodCall  go to state 42
    Exp         go to state 43
    Term        go to state 44
    Factor      go to state 45


state 26

    3 VarDecl: Type ID ExpDecl . VarDeclExpList ';'

    ','  shift, and go to state 46

    $default  reduce using rule 8 (VarDeclExpList)

    VarDeclExpList  go to state 47


state 27

   25 Type: Type '[' ']' .

    $default  reduce using rule 25 (Type)


state 28

    2 MainClass: KW_CLASS ID '{' StaticVarDeclList StaticMethodDeclList KW_PUBLIC KW_STATIC KW_VOID MAIN . '(' KW_STRING '[' ']' ID ')' '{' StatementList '}' '}'

    '('  shift, and go to state 48


state 29

   31 StaticMethodDecl: KW_PUBLIC KW_STATIC Type ID . '(' FormalList ')' '{' StatementList '}'

    '('  shift, and go to state 49


state 30

   58 Factor: TOK_PLUS . Factor

    TOK_PLUS           shift, and go to state 30
    TOK_MINUS          shift, and go to state 31
    TOK_NOT            shift, and go to state 32
    KW_FALSE           shift, and go to state 33
    KW_TRUE            shift, and go to state 34
    KW_NEW             shift, and go to state 35
    INTEGER_PARSE_INT  shift, and go to state 36
    INTEGER_LITERAL    shift, and go to state 37
    STRING_LITERAL     shift, and go to state 38
    ID                 shift, and go to state 39
    '('                shift, and go to state 40

    LeftValue   go to state 41
    MethodCall  go to state 42
    Factor      go to state 50


state 31

   59 Factor: TOK_MINUS . Factor

    TOK_PLUS           shift, and go to state 30
    TOK_MINUS          shift, and go to state 31
    TOK_NOT            shift, and go to state 32
    KW_FALSE           shift, and go to state 33
    KW_TRUE            shift, and go to state 34
    KW_NEW             shift, and go to state 35
    INTEGER_PARSE_INT  shift, and go to state 36
    INTEGER_LITERAL    shift, and go to state 37
    STRING_LITERAL     shift, and go to state 38
    ID                 shift, and go to state 39
    '('                shift, and go to state 40

    LeftValue   go to state 41
    MethodCall  go to state 42
    Factor      go to state 51


state 32

   57 Factor: TOK_NOT . Factor

    TOK_PLUS           shift, and go to state 30
    TOK_MINUS          shift, and go to state 31
    TOK_NOT            shift, and go to state 32
    KW_FALSE           shift, and go to state 33
    KW_TRUE            shift, and go to state 34
    KW_NEW             shift, and go to state 35
    INTEGER_PARSE_INT  shift, and go to state 36
    INTEGER_LITERAL    shift, and go to state 37
    STRING_LITERAL     shift, and go to state 38
    ID                 shift, and go to state 39
    '('                shift, and go to state 40

    LeftValue   go to state 41
    MethodCall  go to state 42
    Factor      go to state 52


state 33

   56 Factor: KW_FALSE .

    $default  reduce using rule 56 (Factor)


state 34

   55 Factor: KW_TRUE .

    $default  reduce using rule 55 (Factor)


state 35

   64 Factor: KW_NEW . PrimeType Index

    KW_BOOLEAN  shift, and go to state 14
    KW_INT      shift, and go to state 15
    KW_STRING   shift, and go to state 16

    PrimeType  go to state 53


state 36

   30 MethodCall: INTEGER_PARSE_INT . '(' Exp ')'

    '('  shift, and go to state 54


state 37

   53 Factor: INTEGER_LITERAL .

    $default  reduce using rule 53 (Factor)


state 38

   54 Factor: STRING_LITERAL .

    $default  reduce using rule 54 (Factor)


state 39

   20 LeftValue: ID .
   21          | ID . Index
   29 MethodCall: ID . '(' ExpList ')'

    '('  shift, and go to state 55
    '['  shift, and go to state 56

    $default  reduce using rule 20 (LeftValue)

    Index  go to state 57


state 40

   60 Factor: '(' . Exp ')'

    TOK_PLUS           shift, and go to state 30
    TOK_MINUS          shift, and go to state 31
    TOK_NOT            shift, and go to state 32
    KW_FALSE           shift, and go to state 33
    KW_TRUE            shift, and go to state 34
    KW_NEW             shift, and go to state 35
    INTEGER_PARSE_INT  shift, and go to state 36
    INTEGER_LITERAL    shift, and go to state 37
    STRING_LITERAL     shift, and go to state 38
    ID                 shift, and go to state 39
    '('                shift, and go to state 40

    LeftValue   go to state 41
    MethodCall  go to state 42
    Exp         go to state 58
    Term        go to state 44
    Factor      go to state 45


state 41

   61 Factor: LeftValue .
   62       | LeftValue . '.' KW_LENGTH

    '.'  shift, and go to state 59

    $default  reduce using rule 61 (Factor)


state 42

   63 Factor: MethodCall .

    $default  reduce using rule 63 (Factor)


state 43

   39 Exp: Exp . TOK_PLUS Term
   40    | Exp . TOK_MINUS Term
   41    | Exp . TOK_AND Exp
   42    | Exp . TOK_OR Exp
   43    | Exp . TOK_LESS Exp
   44    | Exp . TOK_GREAT Exp
   45    | Exp . TOK_LEQ Exp
   46    | Exp . TOK_GREQ Exp
   47    | Exp . TOK_EQ Exp
   48    | Exp . TOK_NEQ Exp
   65 ExpDecl: '=' Exp .

    TOK_AND    shift, and go to state 60
    TOK_OR     shift, and go to state 61
    TOK_LESS   shift, and go to state 62
    TOK_GREAT  shift, and go to state 63
    TOK_LEQ    shift, and go to state 64
    TOK_GREQ   shift, and go to state 65
    TOK_NEQ    shift, and go to state 66
    TOK_EQ     shift, and go to state 67
    TOK_PLUS   shift, and go to state 68
    TOK_MINUS  shift, and go to state 69

    $default  reduce using rule 65 (ExpDecl)


state 44

   49 Exp: Term .
   50 Term: Term . TOK_MULT Factor
   51     | Term . TOK_DIV Factor

    TOK_MULT  shift, and go to state 70
    TOK_DIV   shift, and go to state 71

    $default  reduce using rule 49 (Exp)


state 45

   52 Term: Factor .

    $default  reduce using rule 52 (Term)


state 46

    7 VarDeclExpList: ',' . ID ExpDecl VarDeclExpList

    ID  shift, and go to state 72


state 47

    3 VarDecl: Type ID ExpDecl VarDeclExpList . ';'

    ';'  shift, and go to state 73


state 48

    2 MainClass: KW_CLASS ID '{' StaticVarDeclList StaticMethodDeclList KW_PUBLIC KW_STATIC KW_VOID MAIN '(' . KW_STRING '[' ']' ID ')' '{' StatementList '}' '}'

    KW_STRING  shift, and go to state 74


state 49

   31 StaticMethodDecl: KW_PUBLIC KW_STATIC Type ID '(' . FormalList ')' '{' StatementList '}'

    KW_BOOLEAN  shift, and go to state 14
    KW_INT      shift, and go to state 15
    KW_STRING   shift, and go to state 16

    $default  reduce using rule 35 (FormalList)

    Type        go to state 75
    PrimeType   go to state 19
    FormalList  go to state 76
    Arg         go to state 77


state 50

   58 Factor: TOK_PLUS Factor .

    $default  reduce using rule 58 (Factor)


state 51

   59 Factor: TOK_MINUS Factor .

    $default  reduce using rule 59 (Factor)


state 52

   57 Factor: TOK_NOT Factor .

    $default  reduce using rule 57 (Factor)


state 53

   64 Factor: KW_NEW PrimeType . Index

    '['  shift, and go to state 56

    Index  go to state 78


state 54

   30 MethodCall: INTEGER_PARSE_INT '(' . Exp ')'

    TOK_PLUS           shift, and go to state 30
    TOK_MINUS          shift, and go to state 31
    TOK_NOT            shift, and go to state 32
    KW_FALSE           shift, and go to state 33
    KW_TRUE            shift, and go to state 34
    KW_NEW             shift, and go to state 35
    INTEGER_PARSE_INT  shift, and go to state 36
    INTEGER_LITERAL    shift, and go to state 37
    STRING_LITERAL     shift, and go to state 38
    ID                 shift, and go to state 39
    '('                shift, and go to state 40

    LeftValue   go to state 41
    MethodCall  go to state 42
    Exp         go to state 79
    Term        go to state 44
    Factor      go to state 45


state 55

   29 MethodCall: ID '(' . ExpList ')'

    TOK_PLUS           shift, and go to state 30
    TOK_MINUS          shift, and go to state 31
    TOK_NOT            shift, and go to state 32
    KW_FALSE           shift, and go to state 33
    KW_TRUE            shift, and go to state 34
    KW_NEW             shift, and go to state 35
    INTEGER_PARSE_INT  shift, and go to state 36
    INTEGER_LITERAL    shift, and go to state 37
    STRING_LITERAL     shift, and go to state 38
    ID                 shift, and go to state 39
    '('                shift, and go to state 40

    $default  reduce using rule 68 (ExpList)

    LeftValue   go to state 41
    MethodCall  go to state 42
    Exp         go to state 80
    Term        go to state 44
    Factor      go to state 45
    ExpList     go to state 81


state 56

   22 Index: '[' . Exp ']'

    TOK_PLUS           shift, and go to state 30
    TOK_MINUS          shift, and go to state 31
    TOK_NOT            shift, and go to state 32
    KW_FALSE           shift, and go to state 33
    KW_TRUE            shift, and go to state 34
    KW_NEW             shift, and go to state 35
    INTEGER_PARSE_INT  shift, and go to state 36
    INTEGER_LITERAL    shift, and go to state 37
    STRING_LITERAL     shift, and go to state 38
    ID                 shift, and go to state 39
    '('                shift, and go to state 40

    LeftValue   go to state 41
    MethodCall  go to state 42
    Exp         go to state 82
    Term        go to state 44
    Factor      go to state 45


state 57

   21 LeftValue: ID Index .
   23 Index: Index . '[' Exp ']'

    '['  shift, and go to state 83

    $default  reduce using rule 21 (LeftValue)


state 58

   39 Exp: Exp . TOK_PLUS Term
   40    | Exp . TOK_MINUS Term
   41    | Exp . TOK_AND Exp
   42    | Exp . TOK_OR Exp
   43    | Exp . TOK_LESS Exp
   44    | Exp . TOK_GREAT Exp
   45    | Exp . TOK_LEQ Exp
   46    | Exp . TOK_GREQ Exp
   47    | Exp . TOK_EQ Exp
   48    | Exp . TOK_NEQ Exp
   60 Factor: '(' Exp . ')'

    TOK_AND    shift, and go to state 60
    TOK_OR     shift, and go to state 61
    TOK_LESS   shift, and go to state 62
    TOK_GREAT  shift, and go to state 63
    TOK_LEQ    shift, and go to state 64
    TOK_GREQ   shift, and go to state 65
    TOK_NEQ    shift, and go to state 66
    TOK_EQ     shift, and go to state 67
    TOK_PLUS   shift, and go to state 68
    TOK_MINUS  shift, and go to state 69
    ')'        shift, and go to state 84


state 59

   62 Factor: LeftValue '.' . KW_LENGTH

    KW_LENGTH  shift, and go to state 85


state 60

   41 Exp: Exp TOK_AND . Exp

    TOK_PLUS           shift, and go to state 30
    TOK_MINUS          shift, and go to state 31
    TOK_NOT            shift, and go to state 32
    KW_FALSE           shift, and go to state 33
    KW_TRUE            shift, and go to state 34
    KW_NEW             shift, and go to state 35
    INTEGER_PARSE_INT  shift, and go to state 36
    INTEGER_LITERAL    shift, and go to state 37
    STRING_LITERAL     shift, and go to state 38
    ID                 shift, and go to state 39
    '('                shift, and go to state 40

    LeftValue   go to state 41
    MethodCall  go to state 42
    Exp         go to state 86
    Term        go to state 44
    Factor      go to state 45


state 61

   42 Exp: Exp TOK_OR . Exp

    TOK_PLUS           shift, and go to state 30
    TOK_MINUS          shift, and go to state 31
    TOK_NOT            shift, and go to state 32
    KW_FALSE           shift, and go to state 33
    KW_TRUE            shift, and go to state 34
    KW_NEW             shift, and go to state 35
    INTEGER_PARSE_INT  shift, and go to state 36
    INTEGER_LITERAL    shift, and go to state 37
    STRING_LITERAL     shift, and go to state 38
    ID                 shift, and go to state 39
    '('                shift, and go to state 40

    LeftValue   go to state 41
    MethodCall  go to state 42
    Exp         go to state 87
    Term        go to state 44
    Factor      go to state 45


state 62

   43 Exp: Exp TOK_LESS . Exp

    TOK_PLUS           shift, and go to state 30
    TOK_MINUS          shift, and go to state 31
    TOK_NOT            shift, and go to state 32
    KW_FALSE           shift, and go to state 33
    KW_TRUE            shift, and go to state 34
    KW_NEW             shift, and go to state 35
    INTEGER_PARSE_INT  shift, and go to state 36
    INTEGER_LITERAL    shift, and go to state 37
    STRING_LITERAL     shift, and go to state 38
    ID                 shift, and go to state 39
    '('                shift, and go to state 40

    LeftValue   go to state 41
    MethodCall  go to state 42
    Exp         go to state 88
    Term        go to state 44
    Factor      go to state 45


state 63

   44 Exp: Exp TOK_GREAT . Exp

    TOK_PLUS           shift, and go to state 30
    TOK_MINUS          shift, and go to state 31
    TOK_NOT            shift, and go to state 32
    KW_FALSE           shift, and go to state 33
    KW_TRUE            shift, and go to state 34
    KW_NEW             shift, and go to state 35
    INTEGER_PARSE_INT  shift, and go to state 36
    INTEGER_LITERAL    shift, and go to state 37
    STRING_LITERAL     shift, and go to state 38
    ID                 shift, and go to state 39
    '('                shift, and go to state 40

    LeftValue   go to state 41
    MethodCall  go to state 42
    Exp         go to state 89
    Term        go to state 44
    Factor      go to state 45


state 64

   45 Exp: Exp TOK_LEQ . Exp

    TOK_PLUS           shift, and go to state 30
    TOK_MINUS          shift, and go to state 31
    TOK_NOT            shift, and go to state 32
    KW_FALSE           shift, and go to state 33
    KW_TRUE            shift, and go to state 34
    KW_NEW             shift, and go to state 35
    INTEGER_PARSE_INT  shift, and go to state 36
    INTEGER_LITERAL    shift, and go to state 37
    STRING_LITERAL     shift, and go to state 38
    ID                 shift, and go to state 39
    '('                shift, and go to state 40

    LeftValue   go to state 41
    MethodCall  go to state 42
    Exp         go to state 90
    Term        go to state 44
    Factor      go to state 45


state 65

   46 Exp: Exp TOK_GREQ . Exp

    TOK_PLUS           shift, and go to state 30
    TOK_MINUS          shift, and go to state 31
    TOK_NOT            shift, and go to state 32
    KW_FALSE           shift, and go to state 33
    KW_TRUE            shift, and go to state 34
    KW_NEW             shift, and go to state 35
    INTEGER_PARSE_INT  shift, and go to state 36
    INTEGER_LITERAL    shift, and go to state 37
    STRING_LITERAL     shift, and go to state 38
    ID                 shift, and go to state 39
    '('                shift, and go to state 40

    LeftValue   go to state 41
    MethodCall  go to state 42
    Exp         go to state 91
    Term        go to state 44
    Factor      go to state 45


state 66

   48 Exp: Exp TOK_NEQ . Exp

    TOK_PLUS           shift, and go to state 30
    TOK_MINUS          shift, and go to state 31
    TOK_NOT            shift, and go to state 32
    KW_FALSE           shift, and go to state 33
    KW_TRUE            shift, and go to state 34
    KW_NEW             shift, and go to state 35
    INTEGER_PARSE_INT  shift, and go to state 36
    INTEGER_LITERAL    shift, and go to state 37
    STRING_LITERAL     shift, and go to state 38
    ID                 shift, and go to state 39
    '('                shift, and go to state 40

    LeftValue   go to state 41
    MethodCall  go to state 42
    Exp         go to state 92
    Term        go to state 44
    Factor      go to state 45


state 67

   47 Exp: Exp TOK_EQ . Exp

    TOK_PLUS           shift, and go to state 30
    TOK_MINUS          shift, and go to state 31
    TOK_NOT            shift, and go to state 32
    KW_FALSE           shift, and go to state 33
    KW_TRUE            shift, and go to state 34
    KW_NEW             shift, and go to state 35
    INTEGER_PARSE_INT  shift, and go to state 36
    INTEGER_LITERAL    shift, and go to state 37
    STRING_LITERAL     shift, and go to state 38
    ID                 shift, and go to state 39
    '('                shift, and go to state 40

    LeftValue   go to state 41
    MethodCall  go to state 42
    Exp         go to state 93
    Term        go to state 44
    Factor      go to state 45


state 68

   39 Exp: Exp TOK_PLUS . Term

    TOK_PLUS           shift, and go to state 30
    TOK_MINUS          shift, and go to state 31
    TOK_NOT            shift, and go to state 32
    KW_FALSE           shift, and go to state 33
    KW_TRUE            shift, and go to state 34
    KW_NEW             shift, and go to state 35
    INTEGER_PARSE_INT  shift, and go to state 36
    INTEGER_LITERAL    shift, and go to state 37
    STRING_LITERAL     shift, and go to state 38
    ID                 shift, and go to state 39
    '('                shift, and go to state 40

    LeftValue   go to state 41
    MethodCall  go to state 42
    Term        go to state 94
    Factor      go to state 45


state 69

   40 Exp: Exp TOK_MINUS . Term

    TOK_PLUS           shift, and go to state 30
    TOK_MINUS          shift, and go to state 31
    TOK_NOT            shift, and go to state 32
    KW_FALSE           shift, and go to state 33
    KW_TRUE            shift, and go to state 34
    KW_NEW             shift, and go to state 35
    INTEGER_PARSE_INT  shift, and go to state 36
    INTEGER_LITERAL    shift, and go to state 37
    STRING_LITERAL     shift, and go to state 38
    ID                 shift, and go to state 39
    '('                shift, and go to state 40

    LeftValue   go to state 41
    MethodCall  go to state 42
    Term        go to state 95
    Factor      go to state 45


state 70

   50 Term: Term TOK_MULT . Factor

    TOK_PLUS           shift, and go to state 30
    TOK_MINUS          shift, and go to state 31
    TOK_NOT            shift, and go to state 32
    KW_FALSE           shift, and go to state 33
    KW_TRUE            shift, and go to state 34
    KW_NEW             shift, and go to state 35
    INTEGER_PARSE_INT  shift, and go to state 36
    INTEGER_LITERAL    shift, and go to state 37
    STRING_LITERAL     shift, and go to state 38
    ID                 shift, and go to state 39
    '('                shift, and go to state 40

    LeftValue   go to state 41
    MethodCall  go to state 42
    Factor      go to state 96


state 71

   51 Term: Term TOK_DIV . Factor

    TOK_PLUS           shift, and go to state 30
    TOK_MINUS          shift, and go to state 31
    TOK_NOT            shift, and go to state 32
    KW_FALSE           shift, and go to state 33
    KW_TRUE            shift, and go to state 34
    KW_NEW             shift, and go to state 35
    INTEGER_PARSE_INT  shift, and go to state 36
    INTEGER_LITERAL    shift, and go to state 37
    STRING_LITERAL     shift, and go to state 38
    ID                 shift, and go to state 39
    '('                shift, and go to state 40

    LeftValue   go to state 41
    MethodCall  go to state 42
    Factor      go to state 97


state 72

    7 VarDeclExpList: ',' ID . ExpDecl VarDeclExpList

    '='  shift, and go to state 25

    $default  reduce using rule 66 (ExpDecl)

    ExpDecl  go to state 98


state 73

    3 VarDecl: Type ID ExpDecl VarDeclExpList ';' .

    $default  reduce using rule 3 (VarDecl)


state 74

    2 MainClass: KW_CLASS ID '{' StaticVarDeclList StaticMethodDeclList KW_PUBLIC KW_STATIC KW_VOID MAIN '(' KW_STRING . '[' ']' ID ')' '{' StatementList '}' '}'

    '['  shift, and go to state 99


state 75

   25 Type: Type . '[' ']'
   36 Arg: Type . ID

    ID   shift, and go to state 100
    '['  shift, and go to state 22


state 76

   31 StaticMethodDecl: KW_PUBLIC KW_STATIC Type ID '(' FormalList . ')' '{' StatementList '}'

    ')'  shift, and go to state 101


state 77

   34 FormalList: Arg . ArgList

    ','  shift, and go to state 102

    $default  reduce using rule 38 (ArgList)

    ArgList  go to state 103


state 78

   23 Index: Index . '[' Exp ']'
   64 Factor: KW_NEW PrimeType Index .

    '['  shift, and go to state 83
